--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <div class="page">
     <header class="header">
       <div class="logo"></div>
-      <a class="header__lang-link" target = "_ blank">En</a>
-      <a class="header__lang-link" target = "_ blank">Es</a>
+      <a class="header__lang-link" href="#" target = "_ blank">En</a>
+      <a class="header__lang-link" href="#" target = "_ blank">Es</a>
     </header>
-    <main class="content">
+    <main>
       <section class="lead">
         <h1 class="lead__title">From Portland to Portland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
         <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="the mountains">
         <p class="lead__caption">Your journey starts here</p>
       </section>
-      <section class="intro">
+      <article class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
         <p class="intro__text">
           That's exactly what we have arranged for you via this travel story
@@ -37,12 +37,12 @@
           to sign your favorite book.
         </p>
         <ul class="intro__list">
-          <li>Distance (miles) 3,644</li>
-          <li>Travel time (days) 22</li>
-          <li>Highest point (feet) 9,613</li>
-          <li>Lowest point (feet) -3</li>
+          <li><b>Distance (miles)</b> 3,644</li>
+          <li><b>Travel time (days)</b> 22</li>
+          <li><b>Highest point (feet)</b> 9,613</li>
+          <li><b>Lowest point (feet)</b> -3</li>
         </ul>
-      </section>
+      </article>
       <ul class="photo-grid">
         <li><img class="photo-grid__item" src="./images/items/__item1.jpg" alt="1"></li>
         <li><img class="photo-grid__item" src="./images/items/__item2.jpg" alt="2"></li>
@@ -183,16 +183,6 @@
         <h2 class="cover__title">Historic Route 66</h2>
         <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
       </a>
-
-        <!-- <div class="cover">
-          <img class="cover__background" src="images/__background.jpg">
-          <img class="cover__overlay" src="images/__overlay.jpg">
-            <a class="cover__title" href="https://www.nps.gov/nr/travel/route66/maps66.html" target="_blank">
-              Historic Route 66
-            </a>
-          <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
-        </div> -->
-
     </main>
     <footer class="footer">
       <a class="footer__link" href="https://yandex.com/maps" target="_blank">Maps</a>
