--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="page">
     <header class="header">
       <div class="logo"></div>
-      <a class="header__lang-link" href="#" target = "_ blank">En</a>
-      <a class="header__lang-link" href="#" target = "_ blank">Es</a>
+      <a class="header__lang-link" href="#" target="_blank">En</a>
+      <a class="header__lang-link" href="#" target="_blank">Es</a>
     </header>
     <main>
       <section class="lead">
@@ -37,10 +37,10 @@
           to sign your favorite book.
         </p>
         <ul class="intro__list">
-          <li><b>Distance (miles)</b> 3,644</li>
-          <li><b>Travel time (days)</b> 22</li>
-          <li><b>Highest point (feet)</b> 9,613</li>
-          <li><b>Lowest point (feet)</b> -3</li>
+          <li>Distance (miles) 3,644</li>
+          <li>Travel time (days) 22</li>
+          <li>Highest point (feet) 9,613</li>
+          <li>Lowest point (feet) -3</li>
         </ul>
       </article>
       <ul class="photo-grid">
@@ -179,7 +179,7 @@
         </li>
       </ul>
       <a class="cover" href="https://www.nps.gov/nr/travel/route66/maps66.html" target="_blank">
-        <img class="cover__overlay" src="images/__overlay.jpg">
+        <img class="cover__overlay" src="images/__overlay.jpg" alt="grey color">
         <h2 class="cover__title">Historic Route 66</h2>
         <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
       </a>
