--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>From Portland to Portland</title>
+  <title>From Homeland to Homeland</title>
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     </header>
     <main>
       <section class="lead">
-        <h1 class="lead__title">From Portland to Portland</h1>
+        <h1 class="lead__title">From Homeland to Homeland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
         <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="the mountains">
         <p class="lead__caption">Your journey starts here</p>
