--- a/index.html
+++ b/index.html
@@ -217,17 +217,19 @@
           </li>
         </ul>
       </section>
-      <section>
-        <a class="cover" href="https://www.nps.gov/nr/travel/route66/maps66.html" target="_blank">
-          <h2 class="cover__title">Visit us</h2>
-          <p class="cover__subtitle">
-            &nbsp;&nbsp;&nbsp;&nbsp;Year-round&nbsp;&nbsp;&nbsp;&nbsp;
-            Practicum Art Gallery
-            404 Tim Berners-Lee Ave
-          </p>
+      <secntion class="cover">
+        <h2 class="cover__title">Visit us</h2>
+        <p class="cover__subtitle">
+          &nbsp;&nbsp;&nbsp;&nbsp;Year-round&nbsp;&nbsp;&nbsp;&nbsp;
+          Practicum Art Gallery
+          404 Tim Berners-Lee Ave
+        </p>
+        <form class="cover__form"
+            target="_blank"
+            action="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
           <button class="button cover__button" type="submit">Buy tickets</button>
-          <div class="cover__overlay"></div>
-        </a>
+        </form>
+        <div class="cover__overlay"></div>
       </section>
     </main>
     <footer class="footer">
