--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </li>
         </ul>
       </section>
-      <secntion class="cover">
+      <section class="cover">
         <h2 class="cover__title">Visit us</h2>
         <p class="cover__subtitle">
           &nbsp;&nbsp;&nbsp;&nbsp;Year-round&nbsp;&nbsp;&nbsp;&nbsp;
